# lua_testing_routine

./: .gitignore  CMakeLists.txt
cmake/: FindLua.cmake
scripts/: CardsDeckCreator.lua  cardsDeckClass.lua  cardsDeckCreate.lua  cardsDeckIserter.lua
src/: cardsDeck.cpp  cardsDeck.h  main.cpp
